Fix (gulpfile) Setup for working further

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,6 @@
+@import '../../node_modules/normalize.css/normalize';
 @import "vars";
 @import "fonts";
-@import "libs";
 @import "reset";
 @import "global";
 // ===
