--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -1,55 +1,21 @@
-html{
-  box-sizing: border-box;
-}
+// === minimal self-written CSS-reset settings ===
+html { box-sizing: border-box; }
 
-*,
-*::after,
-*::before{
-  box-sizing: inherit;
-}
+*, *::before, *::after { box-sizing: inherit; }
 
-ul[class],
-ol[class] {
-  padding: 0;
-}
+ul[class], ol[class] { padding: 0; }
 
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
-  margin: 0;
-  font-size: inherit;
-}
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, figure, figcaption, blockquote, dl, dd { margin: 0; }
 
-ul[class] {
-  list-style: none;
-}
+ul[class] { list-style: none; }
 
 img {
-  max-width: 100%;
   display: block;
+  max-width: 100%;
 }
 
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
+input, button, textarea, select { font: inherit; }
 
-a{
-  text-decoration: none;
-  color: inherit;
-}
+a { text-decoration: none; }
+
+address { font-style: normal; }
